# wrench-cone-lib

./: .gitlab-ci.yml  CMakeLists.txt  README.md  license.txt
apps/: CMakeLists.txt
apps/WrenchConeLibPerf/: example.cpp
apps/pyWrenchConeLibPerf/: example.py
bindings/python/: CMakeLists.txt  __init__.py  pyWrenchConeLib.cpp
bindings/python/pyWrenchConeLib/: pyWrenchConeLib.cpp
bindings/python/tests/: CMakeLists.txt  TestPyWrenchConeLib.py
examples/: CMakeLists.txt  wrenchConeLibPerf.cpp
include/WrenchConeLib/WrenchConeLib/: CWC.h  ContactSurface.h  WrenchCone.h
include/wcl/: ContactSurface.h  WrenchCone.h  api.h
include/wrench_cone_lib/wcl/: CWC.h  ContactSurface.h  WrenchCone.h
share/: CMakeLists.txt  readme.md
share/cmake/: WrenchConeLib_PID_Version.cmake  wrench-cone-lib_PID_Version.cmake
src/: CMakeLists.txt  ContactSurface.cpp  WrenchCone.cpp
src/WrenchConeLib/: CWC.cpp  ContactSurface.cpp  WrenchCone.cpp
src/pyWrenchConeLib/: PyCWC.cpp  PyCWC.h  PyContactSurface.cpp  PyContactSurface.h  PyWrenchCone.cpp  PyWrenchCone.h  __init__.py  pyWrenchConeLib.cpp  utils.cpp  utils.h
src/wrench_cone_lib/: CWC.cpp  ContactSurface.cpp  WrenchCone.cpp
test/: CMakeLists.txt
test/WrenchConeLib/: TestWrenchConeLib.cpp
test/pyWrenchConeLib/: TestPyWrenchConeLib.py
test/wrench_cone_lib/: TestWrenchConeLib.cpp
tests/: CMakeLists.txt  TestWrenchConeLib.cpp
