enable_testing()

if(${BUILD_TEST_STATIC_BOOST})
    set(Boost_USE_STATIC_LIBS ON)
    set(BUILD_SHARED_LIBS OFF)
    set(BOOST_DEFS "")
    set(BUILD_TYPE STATIC)
else()
    set(Boost_USE_STATIC_LIBS OFF)
    set(BUILD_SHARED_LIBS ON)
    set(BOOST_DEFS Boost::dynamic_linking)
    set(BUILD_TYPE SHARED)
endif()
find_package(Boost REQUIRED COMPONENTS unit_test_framework)

add_executable(wclTest TestWrenchConeLib.cpp)
target_link_libraries(wclTest PRIVATE ${PROJECT_NAME} Boost::unit_test_framework)
add_test(wclTestUnit wclTest)
# Adding a project configuration file (for MSVC only)
generate_msvc_dot_user_file(wclTest)

